fix pageDetail url

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
         brightest, and most innovative in the interactive entertainment industry.
         For three exciting days, leading-edge comparnies, groundbreaking new technologies, and never-before-seen products will be showcased. The Hyper Programe connects you with both new and existing partners, industry executives, gamers, and social
         influencers providing unprecedent exposure.</p>
+      <form>
+        <div class="form-group">
+          <select class="form-control" id="platform-select">
+            <option value="">Platform: Any</option>
+            <option data-id=" 187">Playstation 5</option>
+            <option data-id="18">Playstation 4</option>
+            <option data-id="186">Xbox Series X / S</option>
+            <option data-id="1">Xbox One</option>
+            <option data-id="7">Switch</option>
+            <option data-id="4">PC</option>
+            <option data-id="6">Linux</option>
+            <option data-id="3">iOS</option>
+            <option data-id="21">Android</option>
+          </select>
+        </div>
+      </form>
     </div>
 
 
