--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div class="form-group">
           <select class="form-control" id="platform-select">
             <option value="">Platform: Any</option>
-            <option data-id=" 187">Playstation 5</option>
-            <option data-id="18">Playstation 4</option>
-            <option data-id="186">Xbox Series X / S</option>
-            <option data-id="1">Xbox One</option>
-            <option data-id="7">Switch</option>
-            <option data-id="4">PC</option>
-            <option data-id="6">Linux</option>
-            <option data-id="3">iOS</option>
-            <option data-id="21">Android</option>
+            <option value=" 187">Playstation 5</option>
+            <option value="18">Playstation 4</option>
+            <option value="186">Xbox Series X / S</option>
+            <option value="1">Xbox One</option>
+            <option value="7">Switch</option>
+            <option value="4">PC</option>
+            <option value="6">Linux</option>
+            <option value="3">iOS</option>
+            <option value="21">Android</option>
           </select>
         </div>
       </form>
