fix front on pageList

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 
       </div>
     </section>
+    <footer class="my-3">
+      <div class="footer-line"> </div>
+      <p class="my-3">Caroline @ 2021 - Fictional website for exercise</p>
+    </footer>
   </div>
   <script src="./dist/bundle.js"></script>
 </body>
