add dotenv module

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="row mt-5 mb-3">
-      <h1 class="col-8">The Hyper Programe</h1>
+      <h1 class="col-8"><a class="home" href="index.html#pagelist">The Hyper Programe</a></h1>
       <div class="d-flex justify-content-end align-items-center col-4">
         <form id="game-searched">
           <img src="https://icon-library.com/images/google-search-magnifying-glass-icon/google-search-magnifying-glass-icon-5.jpg" alt="Google loupe" class="icon" />
